--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\" \"npm run webhook\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "webhook": "./sendgrid_webhook.sh"
   },
   "keywords": [],
   "author": "",
@@ -25,9 +26,11 @@
     "cookie-session": "^1.3.3",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
+    "lodash": "^4.17.15",
     "mongoose": "^5.6.4",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
+    "path-parser": "2.0.2",
     "stripe": "^7.4.0"
   }
 }
