--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/helpers": "^6.4.0",
-    "@sendgrid/mail": "^6.4.0",
+    "@sendgrid/helpers": "^7.4.0",
+    "@sendgrid/mail": "^7.4.0",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.1",
     "cookie-session": "^1.3.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
     "lodash": "^4.17.15",
